[package]
name = "autogguf"
description = "Convert HuggingFace models to GGUF automatically."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive", "wrap_help"] }
futures-util = "0.3.30"
reqwest = { version = "0.12.7", features = ["stream"] }
shellexpand = { version = "3.1.0", features = ["full"] }
tokio = { version = "1.40.0", features = ["full"] }
